--- a/style.css
+++ b/style.css
@@ -14,13 +14,20 @@ body {
 h1 {
     color: #aaf;
     font-size: 5rem;
+    margin-bottom: 5px;
     text-align: center;
     opacity: .8;
 }
 
+small {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
 form {
     box-shadow: 0 4px 10px rgba(0, 0, 0, .4);
-    margin: auto;
+    margin: 50px auto 0;
     max-width: 100%;
     width: 500px;
 }
