--- a/style.css
+++ b/style.css
@@ -35,10 +35,15 @@ form {
 .input {
     border: none;
     border-bottom: 1px solid #e5e5e5;
+    color: #444;
     font-size: 1.5rem;
     padding: 1rem 2rem;
     display: block;
     width: 100%;
+}
+
+.input:focus {
+    outline: 0;
 }
 
 .input::placeholder {
@@ -54,6 +59,8 @@ form {
 .todo-list li {
     background-color: #fff;
     border-top: 1px solid #e5e5e5;
+    color: #666;
+    cursor: pointer;
     font-size: 1.3rem;
     padding: 1rem 2rem;
 }
