--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ small {
 }
 
 form {
-    box-shadow: 0 4px 10px rgba(0, 0, 0, .4);
+    box-shadow: 0 4px 5px rgba(0, 0, 0, .4);
     margin: 50px auto 0;
     max-width: 100%;
     width: 500px;
@@ -34,7 +34,7 @@ form {
 
 .input {
     border: none;
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 2px solid #e5e5e5;
     color: #444;
     font-size: 1.5rem;
     padding: 1rem 2rem;
@@ -59,8 +59,13 @@ form {
 .todo-list li {
     background-color: #fff;
     border-top: 1px solid #e5e5e5;
-    color: #666;
+    color: #555;
     cursor: pointer;
     font-size: 1.3rem;
     padding: 1rem 2rem;
+}
+
+.todo-list li.completed {
+    color: #c5c5c5;
+    text-decoration: line-through;
 }
